--- a/index.ipynb
+++ b/index.ipynb
@@ -67,12 +67,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exploration; designing/testing function parts\n",
+    "response = requests.get(\"https://www.residentadvisor.net/events/us/newyork\")\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_listings = soup.find('div', id=\"event-listing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53 <li><p class=\"eventDate date\"><a href=\"/events.aspx?ai=8&amp;v=day&amp;mn=4&amp;yr=2019&amp;dy=18\"><span>Thu, 18 Apr 2019 /</span></a></p></li>\n"
+     ]
+    }
+   ],
+   "source": [
+    "entries = event_listings.findAll('li')\n",
+    "print(len(entries), entries[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>New York Trax 3rd Anniversary with Luke Slater...</td>\n",
+       "      <td>Good Room</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Secret Solstice Pre-Party with Metro Area, Ale...</td>\n",
+       "      <td>Kings Hall - Avant Gardner</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Planetarium: Hypnotic Spa, Earthen Sea (Live) ...</td>\n",
+       "      <td>Nowadays</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AceMo, Moma Ready and X-Coast</td>\n",
+       "      <td>Elsewhere</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bonobo (DJ Set)</td>\n",
+       "      <td>Elsewhere</td>\n",
+       "      <td>Fri, 19 Apr 2019 /</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0  \\\n",
+       "0  New York Trax 3rd Anniversary with Luke Slater...   \n",
+       "1  Secret Solstice Pre-Party with Metro Area, Ale...   \n",
+       "2  Planetarium: Hypnotic Spa, Earthen Sea (Live) ...   \n",
+       "3                      AceMo, Moma Ready and X-Coast   \n",
+       "4                                    Bonobo (DJ Set)   \n",
+       "\n",
+       "                            1                   2     3  \n",
+       "0                   Good Room  Thu, 18 Apr 2019 /  25.0  \n",
+       "1  Kings Hall - Avant Gardner  Thu, 18 Apr 2019 /   5.0  \n",
+       "2                    Nowadays  Thu, 18 Apr 2019 /   2.0  \n",
+       "3                   Elsewhere  Thu, 18 Apr 2019 /   4.0  \n",
+       "4                   Elsewhere  Fri, 19 Apr 2019 /  94.0  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Successive exploration in function development\n",
+    "rows = []\n",
+    "for entry in entries:\n",
+    "    #Is it a date? If so, set current date.\n",
+    "    date = entry.find('p', class_=\"eventDate date\")\n",
+    "    event = entry.find('h1', class_=\"event-title\")\n",
+    "    if event:\n",
+    "        details = event.text.split(' at ')\n",
+    "        event_name = details[0].strip()\n",
+    "        venue = details[1].strip()\n",
+    "        try:\n",
+    "            n_attendees = int(re.match(\"(\\d*)\", entry.find('p', class_=\"attending\").text)[0])\n",
+    "        except:\n",
+    "            n_attendees = np.nan\n",
+    "        rows.append([event_name, venue, cur_date, n_attendees])\n",
+    "    elif date:\n",
+    "        cur_date = date.text\n",
+    "    else:\n",
+    "        continue\n",
+    "df = pd.DataFrame(rows)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Final function\n",
     "def scrape_events(events_page_url):\n",
     "    #Your code here\n",
+    "    response = requests.get(events_page_url)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    entries = event_listings.findAll('li')\n",
+    "    rows = []\n",
+    "    for entry in entries:\n",
+    "        #Is it a date? If so, set current date.\n",
+    "        date = entry.find('p', class_=\"eventDate date\")\n",
+    "        event = entry.find('h1', class_=\"event-title\")\n",
+    "        if event:\n",
+    "            details = event.text.split(' at ')\n",
+    "            event_name = details[0].strip()\n",
+    "            venue = details[1].strip()\n",
+    "            try:\n",
+    "                n_attendees = int(re.match(\"(\\d*)\", entry.find('p', class_=\"attending\").text)[0])\n",
+    "            except:\n",
+    "                n_attendees = np.nan\n",
+    "            rows.append([event_name, venue, cur_date, n_attendees])\n",
+    "        elif date:\n",
+    "            cur_date = date.text\n",
+    "        else:\n",
+    "            continue\n",
+    "    df = pd.DataFrame(rows)\n",
+    "    df.head()\n",
     "    df.columns = [\"Event_Name\", \"Venue\", \"Event_Date\", \"Number_of_Attendees\"]\n",
     "    return df"
    ]
@@ -86,11 +279,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/events/us/newyork/week/2019-04-25'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Function development cell\n",
+    "soup.find('a', attrs={'ga-event-action':\"Next \"}).attrs['href']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_page(url):\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    url_ext = soup.find('a', attrs={'ga-event-action':\"Next \"}).attrs['href']\n",
+    "    next_page_url = \"https://www.residentadvisor.net\" + url_ext\n",
     "    #Your code here\n",
     "    return next_page_url"
    ]
@@ -106,18 +324,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Event_Name</th>\n",
+       "      <th>Venue</th>\n",
+       "      <th>Event_Date</th>\n",
+       "      <th>Number_of_Attendees</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>New York Trax 3rd Anniversary with Luke Slater...</td>\n",
+       "      <td>Good Room</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Secret Solstice Pre-Party with Metro Area, Ale...</td>\n",
+       "      <td>Kings Hall - Avant Gardner</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Planetarium: Hypnotic Spa, Earthen Sea (Live) ...</td>\n",
+       "      <td>Nowadays</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AceMo, Moma Ready and X-Coast</td>\n",
+       "      <td>Elsewhere</td>\n",
+       "      <td>Thu, 18 Apr 2019 /</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bonobo (DJ Set)</td>\n",
+       "      <td>Elsewhere</td>\n",
+       "      <td>Fri, 19 Apr 2019 /</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Event_Name  \\\n",
+       "0  New York Trax 3rd Anniversary with Luke Slater...   \n",
+       "1  Secret Solstice Pre-Party with Metro Area, Ale...   \n",
+       "2  Planetarium: Hypnotic Spa, Earthen Sea (Live) ...   \n",
+       "3                      AceMo, Moma Ready and X-Coast   \n",
+       "4                                    Bonobo (DJ Set)   \n",
+       "\n",
+       "                        Venue          Event_Date  Number_of_Attendees  \n",
+       "0                   Good Room  Thu, 18 Apr 2019 /                 25.0  \n",
+       "1  Kings Hall - Avant Gardner  Thu, 18 Apr 2019 /                  5.0  \n",
+       "2                    Nowadays  Thu, 18 Apr 2019 /                  2.0  \n",
+       "3                   Elsewhere  Thu, 18 Apr 2019 /                  4.0  \n",
+       "4                   Elsewhere  Fri, 19 Apr 2019 /                 94.0  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Level - Up: Write a Function that Parses the Artists from the Event Name"
+    "#Your code here\n",
+    "dfs = []\n",
+    "total_rows = 0\n",
+    "cur_url = \"https://www.residentadvisor.net/events/us/newyork\"\n",
+    "while total_rows <= 1000:\n",
+    "    df = scrape_events(cur_url)\n",
+    "    dfs.append(df)\n",
+    "    total_rows += len(df)\n",
+    "    cur_url = next_page(cur_url)\n",
+    "    time.sleep(.2)\n",
+    "df = pd.concat(dfs)\n",
+    "df = df.iloc[:1000]\n",
+    "print(len(df))\n",
+    "df.head()"
    ]
   },
   {
@@ -125,11 +444,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def parse_artists(event_name):\n",
-    "    #Your code here\n",
-    "    return artists_list"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
