fixing grammar and title

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Web Scraping - Lab\n",
+    "# Scraping Concerts - Lab\n",
     "\n",
     "## Introduction\n",
     "\n",
-    "Now that you've seen how to scrape a simple website, it's time to again practice those skills on a full fledged site!\n",
+    "Now that you've seen how to scrape a simple website, it's time to again practice those skills on a full-fledged site!\n",
     "In this lab, you'll practice your scraping skills on a music website: https://www.residentadvisor.net.\n",
     "## Objectives\n",
     "\n",
