rewrite code to parse accurate data from scraping

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "'UnterMania II'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
     "# Loop over all date containers on the page\n",
     "\n",
     "# NOTE : there is a case where the number of attendees will mark with something like 1.8K. It will be necessary to calculate it to a number.\n",
-    "units = {'K': 10^3, 'M': 10^6, 'B': 10^9}\n",
+    "units = {'K': 10**3, 'M': 10**6, 'B': 10**9}\n",
     "event_info = []\n",
     "for events in events_all:\n",
     "    for event in events.find_all('li', class_='Column-sc-18hsrnn-0 jHShKh'): \n",
