rewrite code to get accurate data from scraping

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,6 +158,7 @@
    ],
    "source": [
     "# Extract the name from one of the events within that container\n",
+    "# It has an attributes 'data-test-id' under tag <a>\n",
     "name = events_all[0].find('a', attrs = {'data-test-id': 'event-listing-heading'}).text\n",
     "name"
    ]
@@ -190,6 +191,7 @@
    ],
    "source": [
     "# We need to iterate each item in events_all list to get the event info for each event in that date.\n",
+    "# Then the event name can be found from the tag <a> in above container\n",
     "event_name = event_list_firstdate[0].find('a', attrs = {'data-test-id': 'event-listing-heading'}).text\n",
     "event_name"
    ]
@@ -379,7 +381,9 @@
     "# from each, and assemble a dataframe\n",
     "# Loop over all date containers on the page\n",
     "\n",
-    "# NOTE : there is a case where the number of attendees will mark with something like 1.8K. It will be necessary to calculate it to a number.\n",
+    "# NOTE : there is a case where the number of attendees will mark with something like 1.8K. \n",
+    "# It is necessary to convert it and calculate it to a number.\n",
+    "# prepare an unit dictionary to represent the unit K, M and B.\n",
     "units = {'K': 10**3, 'M': 10**6, 'B': 10**9}\n",
     "event_info = []\n",
     "for events in events_all:\n",
@@ -394,10 +398,10 @@
     "            venue = np.nan\n",
     "        if attendees:\n",
     "            try:\n",
-    "                attd_num = int(attendees[-1].text)\n",
+    "                attd_num = int(attendees[-1].text) # cast string of num of attendees as integer\n",
     "            except ValueError:\n",
     "                unit = attendees[-1].text[-1]\n",
-    "                attd_num = int((float(attendees[-1].text[:-1])) * units[unit])\n",
+    "                attd_num = int((float(attendees[-1].text[:-1])) * units[unit]) # get the number and unit and calculate\n",
     "            attd_num = attendees[-1].text\n",
     "        else:\n",
     "            attd_num = np.nan\n",
