--- a/index.ipynb
+++ b/index.ipynb
@@ -15,6 +15,7 @@
     "## Objectives\n",
     "\n",
     "You will be able to:\n",
+    "\n",
     "* Create a full scraping pipeline that involves traversing over many pages of a website, dealing with errors and storing data"
    ]
   },
@@ -1322,9 +1323,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
