added hints in the code chunks to help the students get through the lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +108,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the container with event listings in it\n"
+    "# Find the container with event listings in it\n",
+    "# Some hints are giving along the way\n",
+    "\n",
+    "# This page is organized somewhat unusually, and many of\n",
+    "# the CSS attributes seem auto-generated. We notice that\n",
+    "# there is a div with \"events-all\" in its attributes that\n",
+    "# looks promising if we use soup.find(), call this events_all_div\n",
+    "\n",
+    "events_all_div = None\n",
+    "\n",
+    "# The actual content is nested in a ul containing a single\n",
+    "# li within that div. Unclear why they are using a \"list\"\n",
+    "# concept for one element, but let's go ahead and select it\n",
+    "# Call this event_listings and use it to find ul and li in \n",
+    "# events_all_div\n",
+    "\n",
+    "event_listings = None\n",
+    "\n",
+    "\n",
+    "# Print out some chunks of the text inside to make sure we\n",
+    "# have everything we need in here\n",
+    "# For example print the events for March 30th and 31st\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -161,12 +182,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find a list of events by date within that container\n"
+    "# Find a list of events by date within that container\n",
+    "\n",
+    "# Now we look at what is inside of that event_listings li tag.\n",
+    "# Based on looking at the HTML with developer tools, we see\n",
+    "# that there are 13 children of that tag, all divs. Each div\n",
+    "# is either a container of events on a given date, or empty\n",
+    "\n",
+    "# Let's create a collection of those divs. recursive=False\n",
+    "# means we stop at 1 level below the event_listings li\n",
+    "dates = event_listings.findChildren(recursive=False)\n",
+    "\n",
+    "# Now let's print out the start of the March 30th and March\n",
+    "# 31st sections again. This time each is in its own \"date\"\n",
+    "# container\n",
+    "\n",
+    "# March 30th is at the 0 index\n",
+    "print(\"0 index:\", dates[0].text[:200])\n",
+    "print()\n",
+    "# The 1 index is empty. We'll need to skip this later\n",
+    "print(\"1 index: \", dates[1].text)\n",
+    "print()\n",
+    "# March 31st is at the 2 index\n",
+    "print(\"2 index:\", dates[2].text[:200])\n",
+    "\n",
+    "# Now we know we can loop over all of the items in the dates\n",
+    "# list of divs to find the dates, although some will be blank\n",
+    "# so we'll need to skip them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -219,12 +266,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract the date (e.g. Sat, 30 Mar) from one of those containers\n"
+    "# Extract the date (e.g. Sat, 30 Mar) from one of those containers\n",
+    "# Call this first_date\n",
+    "\n",
+    "# Grabbing just one to practice on\n",
+    "first_date = None\n",
+    "\n",
+    "# This div contains a div with the date, followed by several uls\n",
+    "# containing actual event information\n",
+    "\n",
+    "# The div with the date happens to have another human-readable\n",
+    "# CSS class, so let's use that to select it then grab its text\n",
+    "# Call this date, and use class_=sticky header as an argument for\n",
+    "# first_date.find\n",
+    "date = None\n",
+    "\n",
+    "# There is a / thing used for aesthetic reasons; let's remove it\n",
+    "date = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +296,7 @@
        "'Sat, 30 Mar'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,12 +328,35 @@
    "outputs": [],
    "source": [
     "# Extract the name, venue, and number of attendees from one of the\n",
-    "# events within that container\n"
+    "# events within that container\n",
+    "\n",
+    "# As noted previously, the div with information about events on\n",
+    "# this date contains several ul tags, each with information about\n",
+    "# a specific event. Get a list of them.\n",
+    "# (Again this is an odd use of HTML, to have an unordered list\n",
+    "# containing a single list item. But we scrape what we find!)\n",
+    "first_date_events = None\n",
+    "\n",
+    "# Grabbing the first event ul to practice on\n",
+    "first_event = None\n",
+    "\n",
+    "# Each event ul contains a single h3 with the event name, easy enough\n",
+    "name = None\n",
+    "\n",
+    "# First, get all 1-3 divs that match this description,\n",
+    "# where first_event.findAll has attrs={\"height\": 30}\n",
+    "# as one of its arguments\n",
+    "venue_and_attendees = None\n",
+    "# The venue is the 0th (left-most) div, get its text\n",
+    "venue = None\n",
+    "# The number of attendees is the last div (although it's sometimes\n",
+    "# missing), get its text\n",
+    "num_attendees = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -327,25 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'H0L0'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-aa83fdadf99e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mvenue_and_attendees\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlast_event\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"div\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"height\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mvenue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvenue_and_attendees\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mnum_attendees\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvenue_and_attendees\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'H0L0'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# __SOLUTION__\n",
     "\n",
     "# Testing that code out on an event with a missing attendee count\n",
+    "# N.B. This will crash\n",
     "last_event = first_date_events[-1]\n",
     "\n",
     "name = last_event.find(\"h3\").text\n",
@@ -357,17 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Petra, Matthusen & Lang, White & Pitsiokos, and Zorn\n",
-      "Venue: H0L0\n",
+      "Name: UnterMania II\n",
+      "Venue: TBA - New York\n",
       "Date: Sat, 30 Mar\n",
-      "Number of attendees: nan\n"
+      "Number of attendees: 457\n"
      ]
     }
    ],
@@ -398,13 +473,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loop over all of the event entries, extract this information\n",
-    "# from each, and assemble a dataframe\n"
+    "# Run the code below\n",
+    "# Make sure you understand it since it will\n",
+    "# for the basis of the definition of scrape_events below\n",
+    "\n",
+    "# Create an empty list to hold results\n",
+    "rows = []\n",
+    "\n",
+    "# Loop over all date containers on the page\n",
+    "for date_container in dates:\n",
+    "    \n",
+    "    # First check if this is one of the empty divs. If it is,\n",
+    "    # skip ahead to the next one\n",
+    "    if not date_container.text:\n",
+    "        continue\n",
+    "    \n",
+    "    # Same logic as above to extract the date\n",
+    "    date = date_container.find(\"div\", class_=\"sticky-header\").text\n",
+    "    date = date.strip(\"'̸\")\n",
+    "    \n",
+    "    # This time, loop over all of the events\n",
+    "    events = date_container.findChildren(\"ul\")\n",
+    "    for event in events:\n",
+    "        \n",
+    "        # Same logic as above to extract the name, venue, attendees\n",
+    "        name = event.find(\"h3\").text\n",
+    "        venue_and_attendees = event.findAll(\"div\", attrs={\"height\": 30})\n",
+    "        venue = venue_and_attendees[0].text\n",
+    "        try:\n",
+    "            num_attendees = int(venue_and_attendees[-1].text)\n",
+    "        except ValueError:\n",
+    "            num_attendees = np.nan\n",
+    "            \n",
+    "        # New piece here: appending the new information to rows list\n",
+    "        rows.append([name, venue, date, num_attendees])\n",
+    "\n",
+    "# Make the list of lists into a dataframe and display\n",
+    "df = pd.DataFrame(rows)\n",
+    "df  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +658,7 @@
        "[119 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +930,7 @@
        "[119 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,12 +959,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the button, find the relative path, create the URL for the current `soup`\n"
+    "# Find the button, find the relative path, create the URL for the current `soup`\n",
+    "\n",
+    "# This is tricky again, since there are not a lot of\n",
+    "# human-readable CSS classes\n",
+    "\n",
+    "# One unique thing we notice is a > icon on the part where\n",
+    "# you click to go to the next page. It's an SVG with an \n",
+    "# aria-label of \"Right arrow\", this soup.find() will have\n",
+    "# attrs={\"aria-label\": \"Right arrow\"} as an argument\n",
+    "\n",
+    "avg = None\n",
+    "\n",
+    "# That SVG is inside of a div\n",
+    "svg_parent = None\n",
+    "\n",
+    "# And the tag right before that div (its \"previous sibling\")\n",
+    "# is an anchor (link) tag with the path we need\n",
+    "link = None\n",
+    "\n",
+    "# Then we can extract the path from that link to build the full URL\n",
+    "relative_path = None\n",
+    "next_page_url = None\n",
+    "next_page_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +995,7 @@
        "'https://web.archive.org/web/20210326225933/https://ra.co/events/us/newyork?week=2019-04-06'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +1084,7 @@
        "'https://web.archive.org/web/20210326225933/https://ra.co/events/us/newyork?week=2019-04-06'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,12 +1113,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "# Make a dataframe to store results. We will concatenate\n",
+    "# additional dfs as they are returned\n",
+    "overall_df = pd.DataFrame()\n",
+    "\n",
+    "current_url = EVENTS_PAGE_URL\n",
+    "\n",
+    "# Now define a while look on overall_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1269,7 @@
        "[606 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display overall_df the specified sorted order\n",
+    "# Do so by Number of Attendees in descending order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1450,7 @@
        "[606 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
